--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+# mkdir -p ecom/env ecom/src/models ecom/src/views ecom/src/urls ecom/images/users ecom/images/banners ecom/images/logos ecom/css ecom/templates
